--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "common": "^0.2.5",
+    "cross-fetch": "^3.0.4",
     "img": "^3.0.3",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
@@ -28,6 +29,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "src": "^1.1.2",
     "video-react": "^0.14.1"
   },
