--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html public",
+    "start": "parcel index.html",
     "build": "parcel build --public-url ./ index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "staticFiles": {
-    "staticPath": [
-      "public"
-    ],
-    "watcherGlob": "**"
-  },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
@@ -30,8 +24,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "src": "^1.1.2",
-    "video-react": "^0.14.1"
+    "src": "^1.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -43,7 +36,6 @@
     "@babel/preset-react": "^7.0.0",
     "node-sass": "^4.9.4",
     "parcel-bundler": "^1.12.3",
-    "parcel-plugin-static-files-copy": "^2.1.2",
     "redux-devtools": "^3.5.0",
     "sass": "^1.22.7"
   }
